--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /FrameworkIdentify/bin/Debug
+/FrameworkIdentify/obj/Debug
+/FrameworkIdentify/obj/Debug
