--- a/FrameworkIdentify/FrameworkIdentify.csproj
+++ b/FrameworkIdentify/FrameworkIdentify.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
