Feito ajuste para apresentar uma mensagem inicial..

--- a/FrameworkIdentify/FrameworkIdentify.csproj
+++ b/FrameworkIdentify/FrameworkIdentify.csproj
@@ -33,6 +33,9 @@
   <PropertyGroup>
     <ApplicationIcon>Resources\1492629784_Coding_Icons_-_LINE-11.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>FrameworkIdentify.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
